--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "create": "webpack"
+    "start": "webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
   "babel": {
-     "presets": ["env", "react"]
-   },
+    "presets": [
+      "env",
+      "react"
+    ]
+  },
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
