--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
   "name": "github-battle",
   "version": "1.0.0",
-  "description": "",
+  "description": "Project for React Training's fundamental course.",
   "main": "index.js",
   "scripts": {
-    "create": "webpack",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "build": "NODE_ENV='production' webpack -p",
+    "firebase-init": "firebase login && firebase init",
+    "deploy": "npm run build && firebase deploy"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Tyler McGinnis",
+  "license": "MIT",
   "babel": {
     "presets": [
       "env",
       "react"
     ]
   },
-  "dependencies": {
-    "axios": "^0.16.2",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
-  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.5",
-    "html-webpack-plugin": "^2.30.1",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.2.2",
+    "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.27.3",
+    "firebase-tools": "^3.5.0",
+    "html-webpack-plugin": "^2.28.0",
+    "style-loader": "^0.16.0",
+    "webpack": "^2.3.1",
+    "webpack-dev-server": "^2.4.2"
+  },
+  "dependencies": {
+    "axios": "^0.16.0",
+    "prop-types": "^15.5.4",
+    "react": "^16.0.0-alpha.5",
+    "react-dom": "^16.0.0-alpha.5",
+    "react-router-dom": "^4.0.0"
   }
 }
